--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.5",
-        "popper.js": "^1.12",
+        "lodash": "^4.17.11",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17"
+        "ts-loader": "^5.3.3",
+        "typescript": "^3.2.2",
+        "vue": "^2.5.21",
+        "vue-class-component": "^6.3.2",
+        "vuex": "^3.0.1"
     }
 }
