--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        }, 
+        "files": ["tests/functions.php"]
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
